[gd_scene load_steps=26 format=3]

[ext_resource type="Texture2D" uid="uid://pit08ec3mgem" path="res://UI/buttons/buttonsmallpressed.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dndgdn80hgnvp" path="res://UI/buttons/buttonsmall.png" id="2"]
[ext_resource type="PackedScene" path="res://LineEdit.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bj5bcu35lnsq0" path="res://UI/LineEdit.png" id="4"]
[ext_resource type="Texture2D" uid="uid://die8077y5xo4h" path="res://UI/LineEditFocus.png" id="5"]
[ext_resource type="FontFile" uid="uid://cl2vm8bf54k8i" path="res://fonts/ARIALBD 1.TTF" id="6"]
[ext_resource type="Texture2D" uid="uid://bh7neancll7xb" path="res://UI/HugePanel.png" id="7"]
[ext_resource type="FontFile" path="res://fonts/wii.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://djlgaf38iqw8w" path="res://UI/Triangle.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dkgrsyt650vc8" path="res://UI/Trianglepressed.png" id="10"]
[ext_resource type="Script" path="res://Function Presets/AutoRotate.gd" id="11"]
[ext_resource type="Theme" uid="uid://byp0imswcta2n" path="res://small.tres" id="12"]

[sub_resource type="FontFile" id=13]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="Theme" id=16]
PopupMenu/fonts/font = SubResource( 13 )
PopupMenu/icons/radio_checked = ExtResource( 10 )
PopupMenu/icons/radio_unchecked = ExtResource( 9 )
PopupMenu/styles/hover = SubResource( 14 )
PopupMenu/styles/panel = SubResource( 15 )

[sub_resource type="CompressedTexture2D" id=17]

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=20]

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="FontFile" id=22]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=23]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=24]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="ImageTexture" id=25]

[node name="Functions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="HugePanel" type="Sprite2D" parent="."]
position = Vector2( -122, 400 )
texture = ExtResource( 7 )

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 11.0
offset_top = 129.0
offset_right = 207.0
offset_bottom = 215.0
theme = SubResource( 16 )
theme_override_fonts/font = ExtResource( 8 )
theme_override_icons/arrow = SubResource( 17 )
theme_override_styles/hover = SubResource( 18 )
theme_override_styles/pressed = SubResource( 19 )
theme_override_styles/focus = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
align = 1

[node name="X" parent="." instance=ExtResource( 3 )]
offset_left = 279.0
offset_top = 128.0
offset_right = -1161.0
offset_bottom = -687.0
theme_override_fonts/font = SubResource( 22 )
align = 1

[node name="Y" parent="." instance=ExtResource( 3 )]
offset_left = 474.0
offset_top = 128.0
offset_right = -966.0
offset_bottom = -684.0
theme_override_fonts/font = SubResource( 22 )
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 11.0
offset_top = 90.0
offset_right = 208.0
offset_bottom = 128.0
pivot_offset = Vector2( 143, 10 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[center]Point"
text = "Point"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 278.0
offset_top = 90.0
offset_right = 616.0
offset_bottom = 126.0
pivot_offset = Vector2( 189, 14 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[center]Position"
text = "Position"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 240.0
offset_top = 133.0
offset_right = 279.0
offset_bottom = 169.0
pivot_offset = Vector2( 189, 14 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[center]X:"
text = "X:"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 435.0
offset_top = 133.0
offset_right = 474.0
offset_bottom = 169.0
pivot_offset = Vector2( 189, 14 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[center]Y:"
text = "Y:"

[node name="Rotation" parent="." instance=ExtResource( 3 )]
offset_left = 142.0
offset_top = 238.0
offset_right = -1298.0
offset_bottom = -577.0
theme_override_fonts/font = SubResource( 22 )
align = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
offset_top = 243.0
offset_right = 144.0
offset_bottom = 279.0
pivot_offset = Vector2( 189, 14 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[center]Rotation:"
text = "Rotation:"

[node name="Speed" parent="." instance=ExtResource( 3 )]
offset_left = 454.0
offset_top = 238.0
offset_right = -986.0
offset_bottom = -577.0
theme_override_fonts/font = SubResource( 22 )
align = 1

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
offset_left = 306.0
offset_top = 243.0
offset_right = 450.0
offset_bottom = 279.0
pivot_offset = Vector2( 85, 19 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[right]Speed:"
text = "Speed:"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
offset_left = 326.0
offset_top = 266.0
offset_right = 661.0
offset_bottom = 368.0
scale = Vector2( 0.4, 0.4 )
pivot_offset = Vector2( 85, 19 )
theme_override_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
text = "[right]*only shown in game"
text = "*only shown in game"

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
offset_left = 170.0
offset_top = 384.0
offset_right = 534.0
offset_bottom = 420.0
pivot_offset = Vector2( 189, 14 )
theme_override_fonts/normal_font = SubResource( 24 )
bbcode_enabled = true
text = "[center]Returns to start position"
text = "Returns to start position"

[node name="returns" type="CheckBox" parent="."]
offset_left = 116.0
offset_top = 373.0
offset_right = 176.0
offset_bottom = 428.0
theme = ExtResource( 12 )
theme_override_icons/radio_checked_disabled = SubResource( 25 )
theme_override_icons/radio_checked = SubResource( 25 )
theme_override_icons/checked_disabled = SubResource( 25 )
theme_override_icons/radio_unchecked_disabled = SubResource( 25 )
theme_override_icons/checked = SubResource( 25 )
theme_override_icons/radio_unchecked = SubResource( 25 )
theme_override_icons/unchecked_disabled = SubResource( 25 )
theme_override_icons/unchecked = SubResource( 25 )

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="X" to="." method="_on_X_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_Y_text_changed"]
[connection signal="text_changed" from="Rotation" to="." method="_on_Rotation_text_changed"]
[connection signal="text_changed" from="Speed" to="." method="_on_Speed_text_changed"]
[connection signal="pressed" from="returns" to="." method="_on_returns_pressed"]
